--- a/styles/communityPost.css
+++ b/styles/communityPost.css
@@ -4,14 +4,12 @@ body {
     align-items: center;
     font-family: Arial, sans-serif;
     padding: 10px;
-    /* Add some padding to the body */
-
 }
 
 h1 {
     margin-top: 20px;
     font-size: 2rem;
-    /* Increase font size */
+    font-weight: bold;
 }
 
 form {
@@ -24,31 +22,21 @@ form {
 
 input[type="file"] {
     padding: 15px;
-    /* Increase padding */
     font-size: 1.2rem;
-    /* Increase font size */
     color: white;
-    /* Text color */
     border-radius: 10px;
-    /* Add border radius */
     border: 1px solid #ccc;
-    /* Border */
 }
 
 button {
     margin-top: 10px;
     width: 100%;
     padding: 15px;
-    /* Increase padding */
     border-radius: 10px;
-    /* Increase border radius */
     border: 1px solid #ccc;
     font-size: 1.2rem;
-    /* Increase font size */
     color: white;
-    /* Make text white */
     background-color: #FF8624;
-    /* Button background color */
 }
 
 #map {
@@ -83,24 +71,35 @@ button {
     font-size: 1.2rem;
 }
 
-.error-message {
-    color: red;
-    background-color: #ffe6e6;
-    border: 1px solid #ffcccc;
-    margin-top: 10px;
+.alert {
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    border: 1px solid red;
+    background-color: #f8d7da;
+    color: #721c24;
     border-radius: 5px;
-    display: none;
-    font-size: 1.8rem;
-    z-index: 1000; 
-    position: absolute; 
-    margin: 5% auto;
-    padding: 25px;
-    width: 80%;
+    box-sizing: border-box;
+    position: fixed;
+    /* top: 0; */
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
+
+h2 {
+    font-family: "Rubik", sans-serif;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: #141a39;
+    text-transform: uppercase;
+    cursor: default;
+    margin: 20px 0;
+    text-align: center;
 }
 
 /* Ensure responsiveness */
 @media (max-width: 430px) {
-
     h1 {
         font-size: 4rem;
     }
@@ -126,5 +125,10 @@ button {
 
     .preview img {
         max-width: 130px;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        margin: 15px 0;
     }
 }
