--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -86,5 +86,5 @@
                 <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
               <% } %>
             </div>
-            <script src="../scripts/dietTasks.js"></script>
+            <!-- <script src="../scripts/dietTasks.js"></script> -->
         <%- include("templates/footer") %>
