--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -87,6 +87,6 @@
                 <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
               <% } %>
             </div>
-            <script src="../scripts/fitTasks.js"></script>
+            <!-- <script src="../scripts/fitTasks.js"></script> -->
                 
         <%- include("templates/footer") %>
