--- a/styles/body-scan.css
+++ b/styles/body-scan.css
@@ -58,7 +58,7 @@ footer {
     opacity: 0.6;
 }
 
-#continue-ctn {
+#cancel-ctn {
     position: absolute;
     left: 210px;
     bottom: 30px;
@@ -68,30 +68,31 @@ footer {
     border-radius: 20px;
 }
 
-#continue {
+#cancel {
     color: white;
     font-size: 16pt;
     text-align: center;
     position: absolute;
     left: 30px;
-    top: 15px;
+    top: 20px;
 }
 
-#continue-btn {
+#cancel-btn {
     position: absolute;
     right: 10px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 30px;
-    /* background-color: rgb(221, 218, 218); */
-    /* top: 5px; */
+    background-color: rgb(221, 218, 218);
+    opacity: 0.8;
+    top: 10px;
 }
 
-#continue-icon {
+#cancel-icon {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 25%;
+    top: 10%;
 }
 
 #dash-board-icon {
@@ -135,3 +136,36 @@ video {
     margin: 0;
     padding: 0;
 }
+
+#scanning {
+    position: absolute;
+    bottom: 18%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgb(185, 254, 253);
+    font-size: 20pt;   
+    font-weight: bold; 
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 30px;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side,rgb(185, 254, 253) 90%,#0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: l1 1s steps(4) infinite;
+    margin: 10px 10px 0;
+  }
+  @keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
+
+  #wait-msg {
+    position: absolute;
+    top: 80px;
+    left: 20%;
+    color: rgb(185, 254, 253);
+    text-align: center;
+    font-size: 20pt;
+    font-weight: bold;
+  }
