--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -119,7 +119,7 @@
         }
     </script>
 
-    <!-- one click event for uploading image / mitigating the steps -->
+    <!-- one click event for uploading image / mitigating the steps / success message-->
     <script>
         document.getElementById('profileImageLink').addEventListener('click', function (e) {
             e.preventDefault();
