--- a/styles/community.css
+++ b/styles/community.css
@@ -162,6 +162,25 @@
     font-size: 18px;
 }
 
+.alert-success {
+    color:#FF8624;
+    background-color:#f5f5f5;
+    padding: 15px;
+    margin-bottom: 10px;
+    border: 1px solid transparent;
+    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
+    border-radius: 4px; 
+    font-weight: bold;
+    text-align: center;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000; 
+    width: 100%; 
+    font-size: 1.8rem;
+}
+
 /* Modal CSS */
 .modal {
     display: none;
