--- a/styles/body-scan.css
+++ b/styles/body-scan.css
@@ -58,6 +58,43 @@ footer {
     opacity: 0.6;
 }
 
+#continue-ctn {
+    position: absolute;
+    left: 210px;
+    bottom: 30px;
+    background-color: #FF8624;
+    width: 200px;
+    height: 60px;
+    border-radius: 20px;
+}
+
+#continue {
+    color: white;
+    font-size: 16pt;
+    text-align: center;
+    position: absolute;
+    left: 30px;
+    top: 20px;
+}
+
+#continue-btn {
+    position: absolute;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+    background-color: rgb(221, 218, 218);
+    opacity: 0.8;
+    top: 10px;
+}
+
+#continue-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10%;
+}
+
 #cancel-ctn {
     position: absolute;
     left: 210px;
@@ -168,4 +205,31 @@ video {
     text-align: center;
     font-size: 20pt;
     font-weight: bold;
+  }
+
+  #scan-result {
+    position: absolute;
+    top: 80px;
+    left: 10%;
+    font-size: 24pt;
+    font-weight: bold;
+    color: #FF8624
+  }
+
+  #scan-metrics {
+    position: absolute;
+    left: 20px;
+    bottom: 150px;
+    color: rgb(185, 254, 253);
+    border: solid 1px #FF8624;
+    width: 80%;
+    height: 150px;
+    font-size: 16pt;
+    padding: 20px;
+    border-radius: 20px;
+    display: none;
+  }
+
+  .metrics {
+    padding: 0 0 15px;
   }
