--- a/views/changeEmail.ejs
+++ b/views/changeEmail.ejs
@@ -1,4 +1,5 @@
 <%- include("templates/header") %>
+    <link rel="stylesheet" href="/styles/change.css">
     </head>
 
     <div class="title" class="center">
@@ -11,13 +12,19 @@
             <div class="alert alert-danger" role="alert">
                 <h1>Invalid Email</h1>
             </div>
-            <% } %>
+            <form action="/changeEmail" method="POST" class="index-form center">
+                <h1>New Email</h1>
+                <input type="email" name="email" placeholder="Email" class="border" required>
+                <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
+            </form>
+            <% } else { %>
                 <form action="/changeEmail" method="POST" class="index-form center">
                     <h1>New Email</h1>
                     <input type="email" name="email" placeholder="Email" required>
                     <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
                 </form>
-                <br>
+                <% } %>
+                    <br>
     </div>
 
     <script>
@@ -49,7 +56,7 @@
     <!-- Confirmation Modal -->
     <div id="confirmModal" class="modal">
         <div class="modal-content">
-            <p>Are you sure you want to delete this post?</p>
+            <p>Are you sure you want to change your email?</p>
             <button id="confirmBtn">Yes</button>
             <button id="cancelBtn">No</button>
         </div>
