--- a/styles/ai-training-recommendation.css
+++ b/styles/ai-training-recommendation.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     color: black;
-    font-size: 16pt;
+    font-size: 18pt;
 }
 
 #personalize-training {
@@ -34,7 +34,7 @@ footer {
     background-color: rgb(225, 225, 225);
     width: 60px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 20px;
     position: absolute;
     left: 20px;
     bottom: 60px;
@@ -51,7 +51,7 @@ footer {
     background-color: rgb(225, 225, 225);
     width: 60px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 20px;
     position: absolute;
     left: 100px;
     bottom: 60px;
@@ -71,7 +71,7 @@ footer {
     background-color: #FF8624;
     width: 70px;
     height: 70px;
-    border-radius: 10px;
+    border-radius: 25px;
 }
 
 #plus-icon {
@@ -95,7 +95,7 @@ footer {
     background-color: rgb(225, 225, 225);
     width: 60px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 20px;
     position: absolute;
     right: 100px;
     bottom: 60px;
@@ -112,7 +112,7 @@ footer {
     background-color: rgb(225, 225, 225);
     width: 60px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 20px;
     position: absolute;
     right: 20px;
     bottom: 60px;
@@ -170,9 +170,8 @@ footer {
 
 #go-back-icon {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 15px;
+    left: 32px;
+    top: 65px;
 }
 
 #setting {
@@ -188,19 +187,302 @@ footer {
 
 #setting-icon {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 15px;
+    right: 34px;
+    top: 65px;
 }
 
 #top-nav {
     position: fixed;
     top: 0;
+    background-image: url('/img/wallpaper-header.png');
     color: white;
     font-weight: bold;
     width: 100%;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    height: 300px;
+    height: 250px;
     z-index: 1000;
+}
+
+#my-rec {
+    position: absolute;
+    top: 80px;
+    left: 100px;
+}
+
+#btm-nav-container {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    height: 100px;
+    overflow-x: scroll;
+    padding-top: 170px;
+    margin: 0 20px;
+}
+
+#weight-ai {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    opacity: 0.6;
+}
+
+#weight-ai-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#walking {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 80px;
+    opacity: 0.6;
+}
+
+#walking-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#running {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: #FF8624;
+    position: absolute;
+    bottom: 40px;
+    left: 160px;
+}
+
+#running-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#running:focus-within:focus {
+    /* Add a focus ring around the button */
+    outline: 2px solid #FF8624;
+    outline-offset: 2px;
+  }
+
+#cycling {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 240px;
+    opacity: 0.6;
+}
+
+#cycling-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#hiking {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 320px;
+    opacity: 0.6;
+}
+
+#hiking-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#karate {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 400px;
+    opacity: 0.6;
+}
+
+#karate-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#skating {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 480px;
+    opacity: 0.6;
+
+}
+
+#skating-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+#other {
+    width: 70px;
+    height: 90px;
+    border-radius: 20px;
+    background-color: rgb(228, 226, 226);
+    position: absolute;
+    bottom: 40px;
+    left: 560px;
+    opacity: 0.6;
+
+}
+
+#other-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 25%;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+#content {
+    margin: 290px 20px 200px; 
+}
+
+#training-card-container {
+    display: flex;
+    overflow-x: scroll;
+    gap: 16px;
+    margin: 0;
+    width: 100%;
+}
+
+#suggestion-text {
+    font-size: 20pt;
+    font-weight: bold;
+
+}
+.training-card {
+    width: 300px;
+    height: 250px;
+    border-radius: 40px;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    overflow: hidden;
+    border: solid 1px #FF8624;
+    position: relative;
+}
+
+h2 {
+    height: 40px;
+    text-align: center;
+    padding-top: 5px;
+    font-size: 16pt;
+    margin: 0;
+}
+
+#leg {
+    background-image: url('/img/squat.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#chest {
+    background-image: url('/img/chest-benchpress.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#back {
+    background-image: url('/img/back-seated-cable.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#intensive-cardio {
+    background-image: url('/img/moutain-climb.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#light-cardio {
+    background-image: url('/img/ai-training-scan.png');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#basic-boxing {
+    background-image: url('/img/boxing-basic.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#agility {
+    background-image: url('/img/agility.gif');
+    background-size: cover;
+    background-position: center center;
+    width: 110%;
+    height: 100%;
+}
+
+#ai-assistant {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 30px 0;
+    width: 250px;
+    height: 250px;
+    border-radius: 100px;
+}
+
+#ai-assistant video {
+    width: 180px; /* Set desired width */
+    height: 200px; /* Set desired height */
+    border-radius: 120px;
+}
+
+#anything-else {
+    margin-top: 10px;
 }
