--- a/styles/ai-training-scan-request.css
+++ b/styles/ai-training-scan-request.css
@@ -8,7 +8,7 @@ video:not(.fade) {
 }
 
 #female {
-    margin-left: 2px;
+    margin-left: 1px;
 }
 
 body {
@@ -17,6 +17,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16pt;
+    border: #b5f3fd solid 2px;
 }
 
 
