--- a/styles/body-motion-capture.css
+++ b/styles/body-motion-capture.css
@@ -4,6 +4,9 @@ body {
     background-color: black;
   }
 
+  main {
+    padding-bottom: 200px;
+  }
 
   canvas {
     display: block;
@@ -11,7 +14,6 @@ body {
     height: 100%;
     object-fit: cover;
     margin: 0;
-    padding-bottom: 300px;;
   }
 
   footer {
@@ -20,7 +22,6 @@ body {
     bottom: -40px;
     width: 100%;
     height: 180px;
-    /* background-color: white; */
 }
 
 #home-weight {
@@ -178,4 +179,26 @@ body {
   position: absolute;
   right: 40px;
   top: 70px;
+}
+
+#instruction {
+  margin: 40px 20px;
+  height: fit-content;
+  border: #FF8624 solid 2px;
+  border-radius: 50px;
+  width: 130%;
+  font-size: 30pt;
+  color: white;
+  padding: 20px;
+}
+
+#media-display {
+  background-image: url('/img/squat.gif');
+  background-size: contain;
+  background-size: 100%;
+  background-position: center center;
+  width: 140%;
+  margin: 20px;
+  height: 500px;
+  border-radius: 20px;
 }
