--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,14 @@ nav {
     top: 20px;
 }
 
+.py-5 {
+    padding: 0 !important;
+}
+
+.my-5 {
+    margin: 0 0 180px !important
+}
+
 .navButton {
     margin-left: 19px;
     margin-right: 18px;
@@ -69,13 +77,12 @@ main {
     border-radius: 0.5rem;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    width: 100%;
 }
 
 #header {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding: 2.5rem 2rem;
 }
 
@@ -105,13 +112,54 @@ h1 {
     color: #141a39;
     text-transform: uppercase;
     cursor: default;
+    font-weight: bold;
 }
 
 #leaderboard {
     width: 100%;
     position: relative;
+    margin: 0;
 }
+  
+  @keyframes sparkle {
+    0% {
+      opacity: 0;
+      transform: translateY(0) rotate(0deg);
+    }
+    50% {
+      opacity: 1;
+      transform: translateY(-50px) rotate(180deg);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(0) rotate(360deg);
+    }
+  }
 
+  /* Adjust the size and position of the fireworks */
+  .firework {
+    position: absolute;
+    width: 10px; /* Increase particle size */
+    height: 10px; /* Increase particle size */
+    border-radius: 50%;
+    animation: firework 1s ease-in-out infinite;
+  }
+
+  @keyframes firework {
+    0% {
+      opacity: 0;
+      transform: translateY(0) rotate(0deg);
+    }
+    50% {
+      opacity: 1;
+      transform: translateY(-100px) rotate(180deg);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(0) rotate(360deg);
+    }
+  }
+  
 table {
     width: 100%;
     border-collapse: collapse;
@@ -158,6 +206,7 @@ td {
 .name {
     text-align: left;
     font-size: 1.2rem;
+    padding-left: 0;
 }
 
 .points {
