--- a/views/main.ejs
+++ b/views/main.ejs
@@ -452,10 +452,7 @@
   <div class="px-4 py-5 my-5 text-center">
     <div id="main">
       <div id="header">
-        <h1>Ranking</h1>
-        <!-- <button class="share">
-          <i class="ph ph-share-network"></i>
-        </button> -->
+        <h1>Leader Board</h1>
       </div>
       <div id="leaderboard">
         <div class="ribbon "></div>
@@ -482,6 +479,8 @@
             </tr>
             <% }); %>
         </table>
+        <div class="firework" id="firework1" style="top: 20%; left: 20%;"></div>
+      <div class="firework" id="firework2" style="top: 40%; left: 40%;"></div>
       </div>
     </div>
   </div>
