--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -91,10 +91,52 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+
+        .back-button {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        background-color: #FF8624;
+        color: #ffffff;
+        border: none;
+        border-radius: 5px;
+        padding: 3px 10px;
+        font-size: 20pt;
+        cursor: pointer;
+        text-decoration: none;
+        }
+
+    .back-button:hover {
+        background-color: #e55a50;
+        }
+        #go-back {
+            display:block;
+  position: absolute;
+  left: 20px;
+  top: 50px;
+  background-color: rgb(221, 218, 218);
+  opacity: 0.4;
+  border-radius: 40px;
+  width: 50px;
+  height: 50px;
+}
+#go-back-icon {
+  position: absolute;
+  left: 27px;
+  top: 59px;
+  width:30px;
+  height:30px;
+}
     </style>
     </head>
-
+    
     <br>
+    <a href="/" id="go-back"></a>
+    <svg id="go-back-icon" width="55" height="55" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M17 3L10.6648 5.7151C10.231 5.90101 9.86061 6.20908 9.59882 6.60178V6.60178C7.41955 9.87068 7.41955 14.1293 9.59882 17.3982V17.3982C9.86061 17.7909 10.231 18.099 10.6648 18.2849L17 21"
+        stroke="black" stroke-width="2" stroke-linejoin="round" />
+    </svg>
     <div class="shop-container">
         <h1>Shop</h1>
         <img src="../img/shop.png" alt="Shop Image" class="shop-image">
@@ -106,4 +148,4 @@
             <%- include('templates/item', {item: items[i]}) %>
                 <% } %>
     </ol>
-    <%- include("templates/footer") %>
+    <%- include("templates/end") %>
