--- a/styles/community.css
+++ b/styles/community.css
@@ -1,241 +1,136 @@
-.header {
-    position: relative;
-    background-color: #FF8624;
-    color: #fff;
-    padding: 20px;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    height: 100px;
-    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
-}
-
-.headerTitle {
-    padding-top: 5%;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.header2 {
+body {
     display: flex;
-    margin-top: 10px;
-}
-
-.add-post-container {
-    display: flex wrap;
-    justify-content: center;
-    margin-right: auto;
-}
-
-.addPost {
-    position: relative;
-    text-align: right;
-    margin-left: 10px;
-    margin-top: 10px;
-    background-color: #FF6A00;
-    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-
-.filter {
-    position: relative;
-    text-align: right;
-    padding: 10px;
-    margin-top: 5px;
-    font-size: 1.4rem;
-}
-
-.filter label {
-    margin-right: 5px;
-    font-weight: bold;
-    font-size: 1.8rem;
-}
-
-.filter select {
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: white;
-    font-size: 1.8rem;
-}
-
-.filter option {
-    font-size: 1.4rem;
-}
-
-.post {
-    border: 1px solid #ccc;
-    box-shadow: 0 3px 5px rgba(231, 224, 220, 0.961);
-    padding: 10px;
-    margin: 10px;
-    font-size: 4rem;
-    font-family: Arial, Helvetica, sans-serif;
-    border-radius: 5px;
-}
-
-.profile {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-}
-.profile img {
-    width: 50px;
-    height: 50px;
-    border-radius: 20%;
-    margin-right: 10px;
+    font-family: Arial, sans-serif;
+    padding: 10px;
 }
 
-.actions {
-    display: flex;
-    margin-left: auto;
-}
-
-.tags {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.tag {
-    background-color: #FF8624;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 1.4rem;
-}
-
-.delete {
-    margin-left: 2px;
-    font-size: 1.4rem;
-    align-items: right;
-    text-align: right;
-}
-
-.delete button {
-    background-color: rgb(63, 63, 63);
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin-left: auto;
-}
-
-.username {
-    font-size: 2.3rem;
+h1 {
+    margin-top: 20px;
+    font-size: 2rem;
     font-weight: bold;
-    color: black;
 }
 
-.text {
-    margin: 10px 0px 10px 3px;
-}
-
-.image {
+form {
     display: flex;
-    flex-wrap: wrap;
-}
-
-.image img {
-    height: 300px;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    padding: 5px;
+    max-width: 600px;
 }
 
-#myBtn {
-    display: none;
-    position: fixed;
-    bottom: 80px;
-    right: 15px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: #726d69;
+input[type="file"] {
+    padding: 15px;
+    font-size: 1.2rem;
     color: white;
-    cursor: pointer;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+button {
+    margin-top: 10px;
+    width: 100%;
     padding: 15px;
     border-radius: 10px;
-    font-size: 18px;
+    border: 1px solid #ccc;
+    font-size: 1.2rem;
+    color: white;
+    background-color: #FF8624;
 }
 
-.alert-success {
-    color:#FF8624;
-    background-color:#f5f5f5;
-    padding: 15px;
+#map {
+    margin-top: 10px;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.preview {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.preview img {
+    max-width: 150px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.go-back {
+    align-self: flex-start;
+    margin: 10px;
+    cursor: pointer;
+    color: white;
+    background-color: #FF8624;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.alert-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 10px;
     margin-bottom: 10px;
     border: 1px solid transparent;
-    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
-    border-radius: 4px; 
+    border-radius: 4px;
     font-weight: bold;
     text-align: center;
     position: fixed;
-    top: 20px;
+    top: 80px; 
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000; 
-    width: 100%; 
+    width: 100%;
     font-size: 1.8rem;
 }
 
-/* Modal CSS */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
-}
-
-.modal.show {
-    display: block;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+h2 {
+    font-family: "Rubik", sans-serif;
+    font-weight: bold;
+    color: #141a39;
+    text-transform: uppercase;
+    cursor: default;
+    margin: 20px 0;
     text-align: center;
-    opacity: 0;
-    transform: scale(0.9);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; 
 }
 
-.modal-content p {
-    font-size: 18px;
-}
+/* Ensure responsiveness */
+@media (max-width: 430px) {
+    h1 {
+        font-size: 4rem;
+    }
 
-.modal-content.show {
-    opacity: 1;
-    transform: scale(1);
-}
+    textarea {
+        font-size: 1.5rem;
+        padding: 12px;
+    }
 
-#confirmBtn, #cancelBtn {
-    font-size: 18px;
-    padding: 10px 20px;
-    margin: 10px;
-    cursor: pointer;
-}
+    select, button {
+        font-size: 2rem;
+        padding: 12px;
+    }
 
-#confirmBtn {
-    font-size: 18px;
-    background-color: #f44336;
-    color: white;
-    border: none;
-}
+    .go-back {
+        font-size: 1.5rem;
+        padding: 8px;
+    }
 
-#cancelBtn {
-    font-size: 18px;
-    background-color: #efefef;
-    color: rgb(0, 0, 0);
-    border: none;
+    #map {
+        height: 300px;
+    }
+
+    .preview img {
+        max-width: 130px;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        margin: 15px 0;
+    }
 }
