Fixed index and login styling

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
+	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 
 	<div class="title" class="center">
@@ -39,6 +39,5 @@
 					<a href="/reset-email" class="resize">Reset password</a>
 				</form>
 	</div>
-	
 	<%- include("templates/easteregg") %>
 		<%- include("templates/end") %>
